# rebarr

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  docker-entrypoint.sh
.vexp/: index.db  index.db-shm  index.db-wal  manifest.json
docker/: healthcheck.sh  nginx.conf  supervisord.conf
docs/: CHANGELOG.md  DATABASE.md  FAQ.md  METADATA.md  MangaDetails.txt  PROVIDERS.md  SCRAPER.md  SCRAPING.md  TASKS.md  Trusted Scanlators.md  Version 2.md  anilist.md  lol.json  mangaball.html
migrations/: 20260207150712_initial.sql  20260303000000_alias_source_anilist.sql  20260303000001_manga_provider.sql  20260306000000_monitored_settings.sql  20260306000001_provider_chapter_url.sql  20260306000002_provider_score.sql  20260306000003_score_override.sql  20260306000004_chapter_unique_number.sql  20260306000005_chapter_created_at.sql  20260309000001_provider_search_status.sql  20260309000002_trusted_groups.sql  20260309000003_provider_chapter_scanlator.sql  20260309000004_chapter_base_variant.sql  20260309000005_chapter_preferred_provider.sql  20260315000001_add_is_extra.sql  20260319000000_chapter_file_size.sql  20260320000000_data_migrations_table.sql  20260320000001_providers.sql  20260321000002_comicinfo_fields.sql  20260324000000_wizard_settings.sql  20260326000000_webhooks_and_completed_setting.sql  20260326000001_webhook_body_template.sql  20260327000000_provider_failures.sql  20260328000000_sync_provider_chapters.sql
providers/: AllManga.yaml  AsuraComic.yaml  AsuraComic.yaml.broken  Atsumaru.yaml  Comix.yaml  LHTranslation.yaml  MangaBall.yaml.disabled  MangaBuddy.yaml  MangaCloud.yaml.todo  MangaDex.yaml  MangaHub.yaml  MangaHub.yaml.broken  MangaKakalot.yaml  MangaKakalot.yaml.broken  TCBScans.yaml  WeebCentral.yaml  WeebDex.yaml  allmanga.yaml  allmanga.yaml.broken  comix.yaml  mangaball.yaml  mangaball.yaml.disabled  mangadex.yaml.broken  mangafire.yaml  mangago.yaml  tcbscans.yaml  weebcentral.yaml
src/: api.rs  comicinfo.rs  covers.rs  db.rs  downloader.rs  lib.rs  main.rs  manga.rs  merge.rs  optimizer.rs  scanner.rs  tasks.rs  web.rs  worker.rs
test_fixtures/: AllManga.yaml  Atsumaru.yaml  Comix.yaml  LHTranslation.yaml  MangaBuddy.yaml  MangaDex.yaml  MangaKakalot.yaml  TCB Scans.yaml  WeebCentral.yaml  WeebDex.yaml
tests/: canonical_flow.rs  downloader.rs  merge_flow.rs  provider_limits.rs
web/: index.html
(+78 files in other folders)
