[package]
name = "rebarr"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
anilist_moe = "0.3.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = ["migrate", "sqlite", "macros", "chrono"] }
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12", features = ["stream"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1"
scraper = "0.21"
thiserror = "1"
serde_yaml = "0.9"
serde_json = "1"
urlencoding = "2"
eoka = "0.3"
strsim = "0.11"
zip = "2"
