[package]
name = "rebarr"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
anilist_moe = "0.3.3"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
log = "0.4.29"
env_logger = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.22.0", features = ["serde", "v4", "v5"] }
sqlx = { version = "0.7.4", features = ["migrate", "sqlite", "macros", "chrono"] }
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.13.2", features = ["stream", "rustls"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1"
scraper = "0.25.0"
thiserror = "2.0.18"
serde_yaml = "0.9.34-deprecated"
serde_json = "1"
urlencoding = "2"
eoka = "0.3"
strsim = "0.11"
regex = "1"
zip = "8.2.0"
humantime = "2"
image = { version = "0.25.10", features = ["webp"] }
